<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">锡林郭勒法律服务网</string>
    <string name="home">首页</string>
    <string name="city_test">锡林郭勒</string>
    <string name="no_locate_permission">为了获取更好的体验，请到设置中打开定位权限以便获取天气信息</string>
    <string name="services_info">服务动态</string>
    <string name="change">换一换</string>
    <string name="load_more">查看更多</string>
    <string name="no_more">没有更多数据了</string>
    <string name="no_data">没有数据</string>
    <string name="article_details">动态详情</string>
    <string name="details">详情</string>
    <string name="service">服务</string>
    <string name="my">我的</string>
    <string name="mime">我的</string>
    <string name="welcome">锡林郭勒公共法律服务平台</string>
    <string name="my_pending">我的业务</string>
    <string name="my_processed">我的咨询</string>
    <string name="message_center">消息中心</string>
    <string name="profile">基本资料</string>
    <string name="feedback">意见反馈</string>
    <string name="settings">设置</string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_enter_phone_number">请输入手机号</string>
    <string name="phone_number_login">手机号码登录</string>
    <string name="account_login">账号密码登录</string>
    <string name="register">注册</string>
    <string name="name">真实姓名</string>
    <string name="please_enter_your_name">请输入真实姓名</string>
    <string name="id_card_num">身份证号</string>
    <string name="please_enter_id_card_num">请输入身份证号码</string>
    <string name="account_register">帐&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="pwd_register">密&#8195;&#8195;码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="please_enter_confirm_pwd">请再次输入密码</string>
    <string name="get_verification_code">获取手机验证码</string>
    <string name="please_enter_verification_code">请输入验证码</string>
    <string name="phone_num_error">手机号码位数错误</string>
    <string name="phone_num_do_not_null">手机号码不能为空</string>
    <string name="name_not_null">真实姓名不能为空</string>
    <string name="id_card_num_not_null">身份证号码不能为空</string>
    <string name="pwd_not_null">密码不能为空</string>
    <string name="confirm_pwd_not_null">确认密码不能为空</string>
    <string name="confirm_pwd_error">两次密码输入不一致</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="verification_code_not_null">验证码不能为空</string>
    <string name="not_add_generic_type">没有添加泛型</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="phone_number">手机号码</string>
    <string name="address">地址</string>
    <string name="please_enter_new_pwd">请输入新密码</string>
    <string name="ok">确定</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_update">检查更新</string>
    <string name="clear_cache_success">清除缓存成功</string>
    <string name="clear_cache_failure">清除缓存失败</string>
    <string name="no_update">已经是最新版本了</string>
    <string name="please_login">请先登录</string>
    <string name="loading">加载中&#8230;</string>
    <string name="splash">闪屏</string>
    <string name="click_ignore">点击跳过</string>
    <string name="article_pic">服务动态图片</string>
    <string name="deving">开发中&#8230;</string>
    <string name="test">test_test_test_test</string>
    <string name="load_fail">加载失败</string>
    <string name="click_try_again">点击重试</string>
    <string name="please_enter_your_question">请输入您的问题我们即将解答</string>
    <string name="commit_question">提交问题</string>
    <string name="advisory_need_know">咨询须知</string>
    <string name="advisory_need_know_content">1.本栏目是为群众提供法律问题咨询服务模块，解答内容仅供参考，不具备任何法律效力。\n2.本栏目内容全部公开，请不要填写你个人或他人隐私。\n3.不要包含侮辱，诽谤及违法用语言。</string>
    <string name="please_show_your_question_details">请详细描述</string>
    <string name="advisory_message">留言咨询</string>
    <string name="please_enter_phone_number_or_account">请输入手机号/账号</string>
    <string name="click_login_and_register">点击登录/注册</string>
    <string name="my_advisory">我的咨询</string>
    <string name="i_want_advisory">我要咨询</string>
    <string name="advisory_type">案件类型</string>
    <string name="advisory_content">内容</string>
    <string name="advisory_theme">主题</string>
    <string name="please_select">请点击选择</string>
    <string name="please_enter">请输入</string>
    <string name="personnel_institutions">人员机构</string>
    <string name="institutions">机构</string>
    <string name="personnel">人员</string>
    <string name="search">搜索</string>
    <string name="weather_no_net">天气无网络</string>
    <string name="knowledeg_base">知识库</string>
    <string name="tv_feedback">反馈信息</string>
    <string name="tv_phone_or_email">邮箱 / 电话</string>
    <string name="commit_feedback">提交反馈</string>
    <string name="please_enter_your_contact_way">请输入你的联系方式</string>
    <string name="commit_feedback_success">提交反馈成功</string>
    <string name="feedback_content_not_null">反馈信息不能为空</string>
    <string name="laws_and_regulations">法律法规</string>
    <string name="comment_area">所在地区</string>
    <string name="request_law_help">申请法援</string>
    <string name="ethnic">民族</string>
    <string name="my_bussiness">我的案件</string>
    <string name="business_details">业务详情</string>
    <string name="peoples_mediator">人民调解员</string>
    <string name="peoples_mediation_committee">所属人民\n调解委员会</string>
    <string name="annex">附件</string>
    <string name="no_annex">暂无附件</string>
    <string name="upload_annex">上传附件</string>
    <string name="already_new_version">已经是最新版本了</string>
    <string name="have_new_version">有新版本啦,点我更新</string>
    <string name="app_update">应用更新</string>
    <string name="update">更新</string>
    <string name="cancel">取消</string>
    <string name="downloading">正在下载中，请稍等&#8230;&#8230;&#8230;</string>
    <string name="career">职业</string>
    <string name="education">学历</string>
    <string name="roles">用户类型</string>
    <string name="county">所属旗县</string>
    <string name="town">所属乡镇</string>
    <string name="begin_at">开始</string>
    <string name="end_at">结束</string>
    <string name="deprecate_reason">中止原因</string>
    <string name="confirm_deprecate">确定中止</string>
    <string name="deprecated_reason_not_null">中止原因不能为空</string>
    <string name="deprecate_hint">请填写中止原因</string>
    <string name="deprecate_loading">中止中...</string>
    <string name="deprecate_success">中止成功</string>
    <string name="deprecate">中止</string>
    <string name="filter">筛选</string>
    <string name="hello_world">测试AudioRecord，实现录音功能</string>
    <string name="menu_settings">Settings</string>
    <string name="view_record_wav">录音WAV文件</string>
    <string name="view_record_amr">录音AMR文件</string>
    <string name="view_stop">停止录音</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="str_audiorecbtn_want_cancel">松开手指，取消发送</string>
    <string name="str_audiorecdlg_label_recording">手指上滑，取消发送</string>
    <string name="str_audiorecdlg_label_too_short">录音时间过短</string>
    <string name="str_record_normal">按住 说话</string>
    <string name="str_record_send">松开 结束</string>
    <string name="str_record_want_cancel">松开手指，取消发送</string>
    <string name="error_http_exception">网络加载缓慢，请稍后重试</string>
    <string name="video">视频</string>
    <string name="pin">&#160;PIN&#160;</string>
    <string name="hint_pin">会议室密码，没有则不填</string>
    <string name="join_conference_guest">加入会议</string>
    <string name="btn_login">注册用户登录</string>
    <string name="toast_sharing">正在分享图片</string>
    <string name="toast_share_success">分享成功</string>
    <string name="toast_un_support_image">不支持的图片格式</string>
    <string name="rectification_personnel">矫正人员:</string>
    <string name="rectification_personnel_analyze">矫正人员分析</string>
    <string name="start_video_recording">开始录制视频</string>
    <string name="video_uploading">上传视频中&#8230;</string>
    <string name="video_upload_success">视频上传成功</string>
    <string name="personnel_analysing">人员分析中&#8230;</string>
    <string name="personnel_analyze_success">人员分析成功，即将跳转结果页面</string>
    <string name="rectification_personnel_id_card">矫正人员身份证信息：</string>
    <string name="please_enter_correct_id_card_num">请输入正确的身份证号</string>
    <string name="please_enter_rectification_person_id_card">请输入被矫正人员身份证号码</string>
    <string name="my_order">我的预约</string>
    <string name="online_order">在线预约</string>
    <string name="order_details">预约详情</string>
    <string name="i_want_complaint">我要投诉</string>
    <string name="my_consulting_to_do">待处理咨询</string>
    <string name="my_complaint">我的投诉</string>
    <string name="my_complaint_to_do">待处理投诉</string>
    <string name="consulting_details">留言咨询详情</string>
    <string name="complaint_details">投诉建议详情</string>
    <string name="asked">追问</string>
    <string name="answered">追答</string>
    <string name="reply">回复</string>
    <string name="please_enter_your_answered_details">请详细描述你的追答内容</string>
    <string name="please_enter_your_reply_details">请详细描述你的回复内容</string>
    <string name="user_help">用户手册</string>
    <string name="public_user_help">XMSFJ18-08PX-004-用户使用手册_移动端_社会公众.pdf</string>
    <string name="staff_user_help">XMSFJ18-08PX-004-用户使用手册_移动端_工作人员.pdf</string>
    <string name="online">[在线]</string>
    <string name="off_line">[离线]</string>
    <string name="msg">消息</string>
    <string name="vidyo_consult">视频咨询</string>
    <string name="phone_consult">电话咨询</string>
    <string name="resume">继续</string>
    <string name="setting">设置</string>
    <string name="title_dialog">权限请求</string>
    <string name="message_permission_rationale">授予下列权限以继续该程序:\n\n%1$s</string>
    <string name="message_permission_always_failed">请在设置中授予我们权限:\n\n%1$s</string>
    <string name="message_setting_comeback">用户从设置页面返回.</string>
    <string name="vidyo_permission_tips">视频通话需要访问\n你的存储、录音和相机权限</string>
    <string name="agree">同意</string>
    <string name="message_install_failed">你的手机不同意我们安装应用程序</string>
    <string name="read">[已读]</string>
    <string name="unread">[未读]</string>
    <string name="video_consultation">视频咨询</string>
    <string name="personnel_details">人员详情</string>
    <string name="institutions_details">机构详情</string>
    <string name="personnel_video_consultation">人员视频咨询</string>
    <string name="type">类型</string>
    <string name="distribute">分配</string>
    <string name="organization">机构</string>
    <string name="distribute_personnel">分配人员</string>
    <string name="select_personnel">选择用户</string>
    <string name="confirm_selected">确认选择</string>
    <string name="peoples_mediation_door">人民调解入口</string>
    <string name="https">https://</string>
    <string name="http">http://</string>
    <string name="request_user_info">申请人信息</string>
    <string name="request_user_name">申请人姓名</string>
    <string name="contact_phone_number">联系手机号</string>
    <string name="native_place">籍贯</string>
    <string name="visitor_relations">探访人关系</string>
    <string name="visitor_info">探访人信息</string>
    <string name="visitor">探访人</string>
    <string name="agent_info">代理人信息</string>
    <string name="agent_name">代理人姓名</string>
    <string name="agent_phone_number">代理人手机号码</string>
    <string name="now_address">现住址</string>
    <string name="work_unit">工作单位</string>
    <string name="supervision_place_type">监管场所类型</string>
    <string name="supervision_place">监管场所</string>
    <string name="visit_info">探访信息</string>
    <string name="visit_the_approval_judicial_bureau">探访审批司法局</string>
    <string name="visit_time_range">探访申请时间区间</string>
    <string name="apply_reason">申请理由</string>
    <string name="remote_visitor_door">远程亲情探视帮教申请表</string>
    <string name="please_select_supervision_type">请先选择监管场所类型</string>
    <string name="commit_request_successful">提交申请成功</string>
    <string name="commit_request">提交申请</string>
    <string name="request_user_nam_not_null">申请人姓名不能为空</string>
</resources>