<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/top_bar" />

    <EditText
        android:id="@+id/et_phone"
        style="@style/EditTextStyle"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:hint="@string/please_enter_phone_number"
        android:inputType="phone"
        android:maxLength="11"
        android:padding="@dimen/dp_12"
        android:singleLine="true"
        android:textSize="14sp"
        tools:text="@string/account" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12">

        <EditText
            android:id="@+id/et_verification_code"
            style="@style/EditTextStyle"
            android:hint="@string/please_enter_verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="@dimen/dp_12"
            android:textSize="14sp"
            tools:text="1234" />

        <TextView
            android:id="@+id/tv_get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/dp_12"
            android:text="@string/get_verification_code" />
    </FrameLayout>

    <EditText
        android:id="@+id/et_new_pwd"
        style="@style/EditTextStyle"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:hint="@string/please_enter_new_pwd"
        android:paddingLeft="12dp"
        android:singleLine="true"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/circle_shape"
        android:text="@string/ok"
        android:textColor="#ffffff"
        android:textSize="18sp" />
</LinearLayout>