<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <View style="@style/DividingLineStyle_horizontal"/>

  <LinearLayout
    style="@style/LinearStyle">

    <TextView
      style="@style/ChartFieldKeyStyle"
      android:gravity="start"
      android:text="@string/peoples_mediation_committee"/>

    <TextView
      android:id="@+id/tv_peoples_mediator_committee"
      style="@style/ChartFieldInputValueStyle"
      android:gravity="center_vertical"
      android:hint="@string/please_select"
      android:singleLine="false"
      tools:text="@string/test"/>
  </LinearLayout>

  <View style="@style/DividingLineStyle_horizontal"/>

  <LinearLayout
    style="@style/LinearStyle">

    <TextView
      style="@style/ChartFieldKeyStyle"
      android:text="@string/peoples_mediator"/>

    <TextView
      android:id="@+id/tv_peoples_mediator"
      style="@style/ChartFieldInputValueStyle"
      android:gravity="center_vertical"
      android:hint="@string/please_select"
      android:singleLine="false"
      tools:text="@string/test"/>
  </LinearLayout>

  <View style="@style/DividingLineStyle_horizontal"/>
</LinearLayout>