<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/top_bar"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/dp_12"
      android:orientation="vertical">

      <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/home_banner"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:src="@drawable/home"/>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginLeft="5dp"
          android:text="@string/please_enter_your_question"/>
      </LinearLayout>

      <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="5dp"
        android:background="@drawable/border"
        android:gravity="start"
        android:hint="@string/please_show_your_question_details"
        android:inputType="textMultiLine"
        tools:text="@string/test"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/circle_shape"
        android:text="@string/commit_question"
        android:textColor="@android:color/white"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="#def6e6">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingLeft="@dimen/dp_12"
          android:paddingRight="@dimen/dp_12"
          android:background="#24c34f"
          android:text="@string/advisory_need_know"
          android:textColor="@android:color/white"/>
      </LinearLayout>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="30dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/advisory_need_know_content"/>

    </LinearLayout>
  </LinearLayout>
</android.support.v4.widget.NestedScrollView>
