<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  android:orientation="vertical">

  <include layout="@layout/top_bar"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_marginTop="30dp"
    android:src="@drawable/blue_top"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_height="wrap_content"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:drawableLeft="@drawable/feedback_content"
    android:drawablePadding="10dp"
    android:text="@string/tv_feedback"/>

  <EditText
    android:id="@+id/et_feedback_content"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="5dp"
    android:background="@drawable/border"
    android:gravity="start"
    android:hint="@string/please_show_your_question_details"
    android:inputType="textMultiLine"
    tools:text="@string/test"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:drawableLeft="@drawable/feedback_phone"
    android:drawableStart="@drawable/feedback_phone"
    android:drawablePadding="10dp"
    android:text="@string/tv_phone_or_email"/>

  <EditText
    android:id="@+id/et_email_or_phone"
    style="@style/EditTextStyle"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="@dimen/dp_12"
    android:hint="@string/please_enter_your_contact_way"
    android:singleLine="true"/>

  <Button
    android:id="@+id/btn_commit_feedback"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/selector_button_press"
    android:text="@string/commit_feedback"
    android:textColor="#ffffff"
    android:textSize="20sp"/>
</LinearLayout>